--- a/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BankingDB;Uid=root;Pwd=123456789;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
