Feat: Refactor RabbitMQ Bus for Dependency Injection for parameterless constructors

--- a/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferConnection": "Server=localhost;Database=TransferBankingDB;Uid=root;Pwd=123456789;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
